# iup-cmake

./: .gitignore  CMakeLists.txt
cmake/modules/: FindEXIF.cmake
examples/: CMakeLists.txt
examples/01_dialog/: CMakeLists.txt  main.c
examples/02_customdialog/: CMakeLists.txt
examples/03_okbutton/: CMakeLists.txt
examples/04_notepad/: CMakeLists.txt  main.c
mak.vc12/: iupother.vcxproj  iupother.vcxproj.filters  iupsample.vcxproj
mak.vc15/: cpp.hint  iup.sln  iup_mglplot.vcxproj  iup_plot.vcxproj  iup_scintillacore.vcxproj  iup_scintillacore.vcxproj.filters  iup_scintillagtk.vcxproj  iup_scintillagtk3.vcxproj  iup_scintillawin.vcxproj  iupcd.vcxproj  iupcontrols.vcxproj  iupcore.vcxproj  iupcore.vcxproj.filters  iupfiledlg.vcxproj  iupgl.vcxproj  iupglcontrols.vcxproj  iupgtk.vcxproj  iupgtk3.vcxproj  iupim.vcxproj  iupimglib.vcxproj  iupmot.vcxproj  iupole.vcxproj  iupother.vcxproj  iupsample.vcxproj  iupsample.vcxproj.filters  iupsamplegtk.vcxproj  iuptest.vcxproj  iuptest.vcxproj.filters  iuptestgtk.vcxproj  iuptestgtk3.vcxproj  iuptestgtk3.vcxproj.filters  iuptuio.vcxproj  iuptuio.vcxproj.filters  iupview.vcxproj  iupviewgtk.vcxproj  iupviewgtk3.vcxproj  iupvled.vcxproj  iupweb.vcxproj  iupwin.vcxproj  iupwin.vcxproj.filters  (+1 more)
mak.vc15/iuplua/: iuplua.vcxproj  iuplua_mglplot.vcxproj  iuplua_plot.vcxproj  iuplua_scintilla.vcxproj  iupluacd.vcxproj  iupluaconsole.vcxproj  iupluaconsolegtk.vcxproj  iupluaconsolegtk3.vcxproj  iupluacontrols.vcxproj  iupluafiledlg.vcxproj  iupluagl.vcxproj  iupluaglcontrols.vcxproj  iupluaim.vcxproj  iupluaimglib.vcxproj  iupluaole.vcxproj  iupluascripter.vcxproj  iupluascripterdlg.vcxproj  iupluatuio.vcxproj  iupluaweb.vcxproj
src/: CMakeLists.txt  iup.def  iup_register.c  iup_register.h  out
srccd/: CMakeLists.txt
srcim/: CMakeLists.txt
srcimglib/: CMakeLists.txt
srcscintilla/scintilla3112/include/: SciLexer.h
srcscintilla/scintilla375/lexers/: LexLua.cxx
srcvled/: CMakeLists.txt
