cmake_minimum_required (VERSION 3.21)

set (IUP_VERSION "3.30.0")
project ("IUP-GUI"
    LANGUAGES
    VERSION ${IUP_VERSION})

list (APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/modules")

message (STATUS "System name      : ${CMAKE_SYSTEM_NAME}")
message (STATUS "System version   : ${CMAKE_SYSTEM_VERSION}")
message (STATUS "System processor : ${CMAKE_SYSTEM_PROCESSOR}")

if (CMAKE_SYSTEM_NAME MATCHES Linux)
    if (CMAKE_SYSTEM_VERSION VERSION_LESS_EQUAL 2.6)
        set (NO_GTK_DEFAULT ON)
    endif ()
endif ()

if (NOT IUP_TOOLKIT AND NOT NO_GTK_DEFAULT)
    if (CMAKE_SYSTEM_NAME MATCHES CYGWIN)
        set (GTK_DEFAULT ON)
    elseif (CMAKE_SYSTEM_NAME MATCHES CentOS)
        set (GTK_DEFAULT ON)
    elseif (CMAKE_SYSTEM_NAME MATCHES Linux)
        message (STATUS "GTK_DEFAULT=ON")
        set (GTK_DEFAULT ON)
    elseif (CMAKE_SYSTEM_NAME MATCHES Darwin)
        set (GTK_DEFAULT ON)
    elseif (CMAKE_SYSTEM_NAME MATCHES FreeBSD)
        set (GTK_DEFAULT ON)
    elseif (CMAKE_SYSTEM_NAME MATCHES SunOS)
        if (CMAKE_SYSTEM_PROCESSOR MATCHES x86)
            set (GTK_DEFAULT ON)
        endif ()
    endif ()
endif ()

if (NOT IUP_TOOLKIT AND GTK_DEFAULT)
    if (CMAKE_SYSTEM_NAME MATCHES Linux)
        if (CMAKE_SYSTEM_VERSION VERSION_GREATER_EQUAL 3.1)
            set (IUP_TOOLKIT "GTK3")
        endif ()
    elseif (CMAKE_SYSTEM_NAME MATCHES CYGWIN)
        set (IUP_TOOLKIT "GTK3")
    # Homebrew
    elseif (CMAKE_SYSTEM_NAME MATCHES Darwin)
        if (CMAKE_SYSTEM_VERSION VERSION_GREATER_EQUAL 10)
            set (IUP_TOOLKIT "GTK3")
        endif ()
    else ()
        set (IUP_TOOLKIT "GTK2")
    endif ()
endif ()

if (NOT IUP_TOOLKIT)
    if (CMAKE_SYSTEM_NAME MATCHES Windows)
        set (IUP_TOOLKIT "WIN32")
    endif ()
endif ()

include (CMakeDependentOption)

set (IUP_TOOLKIT "${IUP_TOOLKIT}" CACHE STRING "Select which GUI toolkit to use as a driver for IUP")
set_property (CACHE IUP_TOOLKIT PROPERTY STRINGS "OFF;GTK2;GTK3;Motif;Win32;Haiku")
cmake_dependent_option (IUP_GDK_NULL "Completely remove X11 calls (only works for GTK3)" OFF "IUP_TOOLKIT MATCHES GTK3" OFF)
cmake_dependent_option (IUP_NEW_DRAW "Draw driver with alpha and anti-aliasing in Windows and Linux enabled" ON "IUP_TOOLKIT" OFF)
cmake_dependent_option (IUP_IMGLIB "Build iupimglib: Library for loading and drawing images, icons and cursors" ON "IUP_TOOLKIT" OFF)
cmake_dependent_option (IUP_IMGLIB_LARGE "Enable for large icon support" ON "IUP_IMGLIB" OFF)
cmake_dependent_option (IUP_IM "Build image toolkit" ON "IUP_TOOLKIT" OFF)
cmake_dependent_option (IUP_CD "Build Canvas Draw library" ON "IUP_TOOLKIT" OFF)
cmake_dependent_option (IUP_VLED "Build VLED editor" ON "IUP_CD" OFF)

if (IUP_CD)
    add_subdirectory ("thirdparty/zlib-1.2.11")
    add_subdirectory ("thirdparty/freetype-2.10.2")
    add_subdirectory ("thirdparty/ftgl-2.1.5")
    add_subdirectory ("thirdparty/cd-5.14")
endif ()

if (IUP_TOOLKIT)
    add_subdirectory ("src")
endif ()
if (IUP_IMGLIB)
    add_subdirectory ("srcimglib")
endif ()
if (IUP_IM)
    add_subdirectory ("srcim")
endif ()
if (IUP_CD)
    add_subdirectory ("srccd")
endif ()
if (IUP_VLED)
    add_subdirectory ("srcvled")
endif ()

if (IUP_TOOLKIT AND IUP_IMGLIB)
    add_subdirectory ("examples")
endif ()
